; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nft_compat.c_nft_match_init.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nft_compat.c_nft_match_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nft_ctx = type { i32 }
%struct.nft_expr = type { i32 }
%struct.nlattr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nft_ctx*, %struct.nft_expr*, %struct.nlattr**)* @nft_match_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nft_match_init(%struct.nft_ctx* %0, %struct.nft_expr* %1, %struct.nlattr** %2) #0 {
  %4 = alloca %struct.nft_ctx*, align 8
  %5 = alloca %struct.nft_expr*, align 8
  %6 = alloca %struct.nlattr**, align 8
  store %struct.nft_ctx* %0, %struct.nft_ctx** %4, align 8
  store %struct.nft_expr* %1, %struct.nft_expr** %5, align 8
  store %struct.nlattr** %2, %struct.nlattr*** %6, align 8
  %7 = load %struct.nft_ctx*, %struct.nft_ctx** %4, align 8
  %8 = load %struct.nft_expr*, %struct.nft_expr** %5, align 8
  %9 = load %struct.nlattr**, %struct.nlattr*** %6, align 8
  %10 = load %struct.nft_expr*, %struct.nft_expr** %5, align 8
  %11 = call i32 @nft_expr_priv(%struct.nft_expr* %10)
  %12 = call i32 @__nft_match_init(%struct.nft_ctx* %7, %struct.nft_expr* %8, %struct.nlattr** %9, i32 %11)
  ret i32 %12
}

declare dso_local i32 @__nft_match_init(%struct.nft_ctx*, %struct.nft_expr*, %struct.nlattr**, i32) #1

declare dso_local i32 @nft_expr_priv(%struct.nft_expr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
